# vkdemo

./: .clang-format  .clang-tidy  meson.build
assets/: meson.build
assets/viking_room/: meson.build
shaders/: shader.frag  shader.vert
src/: main.cpp
textures/: meson.build
